<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/khaki">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:text="@string/Curso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:textStyle="bold"
            android:textColor="@color/maroon"
            android:layout_margin="20dp"
            android:layout_gravity="center" />

        <TextView
            android:text="@string/advert"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/olive"
            android:textSize="15dp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/Quiz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/maroon"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:inputType="numberDecimal"
                android:layout_weight="3"
                android:hint="15%"
                android:id="@+id/eQuiz"
                android:textColor="@color/olive"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/Exp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/maroon"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_weight="3"
                android:inputType="numberDecimal"
                android:hint="10%"
                android:id="@+id/eExpo"
                android:textColor="@color/olive"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/lab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textColor="@color/maroon"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_weight="3"
                android:inputType="numberDecimal"
                android:hint="40%"
                android:id="@+id/eLab"
                android:textColor="@color/olive"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/Fpro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/maroon"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_weight="3"
                android:inputType="numberDecimal"
                android:hint="35%"
                android:id="@+id/ePfinal"
                android:textColor="@color/olive"/>
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/boton"
            android:id="@+id/bCal"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/ans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.9"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/maroon"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_weight="1"
                android:id="@+id/tNota"
                android:textColor="@color/olive"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold"
            android:id="@+id/tMessage"
            android:textColor="@color/red"/>

    </LinearLayout>

</ScrollView>
